# My3DFarm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  release-please-config.json  vite.config.ts
.cursor/rules/: my3dfarm.mdc
.github/: pull_request_template.md
.github/workflows/: release-please.yml
e2e/: printer-mock.spec.ts  smoke.spec.ts
e2e/helpers/: moonrakerPlaywright.ts
scripts/: build-rust-release.cmd  tauri-release.cmd
src/: App.tsx  bootstrapStorage.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: discovery.rs  lib.rs  main.rs  ssh.rs
src/components/: AddPrinterTile.tsx  AppErrorBoundary.tsx  AppSettings.tsx  AppShellHeader.tsx  DeveloperToolsPanel.tsx  FleetFarmToolbar.tsx  HubUpdatesPanel.tsx  MassKeyDeployFeed.tsx  PrinterCard.tsx  PrinterDiscovery.tsx  PrinterList.tsx  PrinterOpsHub.tsx  StatusDot.tsx
src/data/: hostSshHints.json
src/diagnostics/: extractKlipperConfigFromLog.test.ts  extractKlipperConfigFromLog.ts  klipperLogHeuristics.test.ts  klipperLogHeuristics.ts  parseKlipperConfigSections.test.ts  parseKlipperConfigSections.ts
src/hooks/: useMoonrakerDiscoveryScan.ts
src/i18n/: index.ts
src/lib/: debugRingBuffer.test.ts  debugRingBuffer.ts  diagnostics.ts  effectiveSsh.test.ts  effectiveSsh.ts  farmGridColumns.test.ts  farmGridColumns.ts  fleetBulkMoonraker.ts  fleetInventorySummary.test.ts  fleetInventorySummary.ts  githubUpstreamTags.test.ts  githubUpstreamTags.ts  locale.test.ts  (+30 more)
(+32 files in other folders)
